[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scenes/UI/Generation/Noises.gd" id="1_pp6j2"]

[node name="Noises" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 41.0
offset_right = -4.0
offset_bottom = -4.0
mouse_filter = 2
script = ExtResource( "1_pp6j2" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
offset_right = 1912.0
offset_bottom = 137.0
columns = 5

[node name="Margin" type="Label" parent="GridContainer"]
offset_top = 1.0
offset_right = 379.0
offset_bottom = 24.0
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Lacunarity" type="Label" parent="GridContainer"]
offset_left = 383.0
offset_right = 762.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Lacunarity"
horizontal_alignment = 1

[node name="Octaves" type="Label" parent="GridContainer"]
offset_left = 766.0
offset_right = 1145.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Octaves"
horizontal_alignment = 1

[node name="Frequencey" type="Label" parent="GridContainer"]
offset_left = 1149.0
offset_right = 1528.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Frequency"
horizontal_alignment = 1

[node name="Persistence" type="Label" parent="GridContainer"]
offset_left = 1532.0
offset_right = 1911.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Persistence"
horizontal_alignment = 1

[node name="Elevation" type="Label" parent="GridContainer"]
offset_top = 33.0
offset_right = 379.0
offset_bottom = 59.0
size_flags_horizontal = 3
text = "Elevation"
horizontal_alignment = 1

[node name="EL" type="LineEdit" parent="GridContainer"]
offset_left = 383.0
offset_top = 30.0
offset_right = 762.0
offset_bottom = 63.0
focus_neighbor_right = NodePath("../EO")
focus_neighbor_bottom = NodePath("../ML")
focus_next = NodePath("../EO")
alignment = 1

[node name="EO" type="LineEdit" parent="GridContainer"]
offset_left = 766.0
offset_top = 30.0
offset_right = 1145.0
offset_bottom = 63.0
focus_neighbor_left = NodePath("../EL")
focus_neighbor_right = NodePath("../EF")
focus_neighbor_bottom = NodePath("../MO")
focus_next = NodePath("../EF")
focus_previous = NodePath("../EL")
alignment = 1

[node name="EF" type="LineEdit" parent="GridContainer"]
offset_left = 1149.0
offset_top = 30.0
offset_right = 1528.0
offset_bottom = 63.0
focus_neighbor_left = NodePath("../EO")
focus_neighbor_right = NodePath("../EP")
focus_neighbor_bottom = NodePath("../MF")
focus_next = NodePath("../EP")
focus_previous = NodePath("../EO")
alignment = 1

[node name="EP" type="LineEdit" parent="GridContainer"]
offset_left = 1532.0
offset_top = 30.0
offset_right = 1911.0
offset_bottom = 63.0
focus_neighbor_left = NodePath("../EF")
focus_neighbor_bottom = NodePath("../MP")
focus_next = NodePath("../ML")
focus_previous = NodePath("../EF")
alignment = 1

[node name="Moisture" type="Label" parent="GridContainer"]
offset_top = 70.0
offset_right = 379.0
offset_bottom = 96.0
size_flags_horizontal = 3
text = "Moisture"
horizontal_alignment = 1

[node name="ML" type="LineEdit" parent="GridContainer"]
offset_left = 383.0
offset_top = 67.0
offset_right = 762.0
offset_bottom = 100.0
alignment = 1

[node name="MO" type="LineEdit" parent="GridContainer"]
offset_left = 766.0
offset_top = 67.0
offset_right = 1145.0
offset_bottom = 100.0
alignment = 1

[node name="MF" type="LineEdit" parent="GridContainer"]
offset_left = 1149.0
offset_top = 67.0
offset_right = 1528.0
offset_bottom = 100.0
alignment = 1

[node name="MP" type="LineEdit" parent="GridContainer"]
offset_left = 1532.0
offset_top = 67.0
offset_right = 1911.0
offset_bottom = 100.0
alignment = 1

[node name="Temperture" type="Label" parent="GridContainer"]
offset_top = 107.0
offset_right = 379.0
offset_bottom = 133.0
size_flags_horizontal = 3
text = "Temperture"
horizontal_alignment = 1

[node name="TL" type="LineEdit" parent="GridContainer"]
offset_left = 383.0
offset_top = 104.0
offset_right = 762.0
offset_bottom = 137.0
alignment = 1

[node name="TO" type="LineEdit" parent="GridContainer"]
offset_left = 766.0
offset_top = 104.0
offset_right = 1145.0
offset_bottom = 137.0
alignment = 1

[node name="TF" type="LineEdit" parent="GridContainer"]
offset_left = 1149.0
offset_top = 104.0
offset_right = 1528.0
offset_bottom = 137.0
alignment = 1

[node name="TP" type="LineEdit" parent="GridContainer"]
offset_left = 1532.0
offset_top = 104.0
offset_right = 1911.0
offset_bottom = 137.0
alignment = 1

[connection signal="text_changed" from="GridContainer/EL" to="." method="_on_EL_text_changed"]
[connection signal="text_changed" from="GridContainer/EO" to="." method="_on_EO_text_changed"]
[connection signal="text_changed" from="GridContainer/EF" to="." method="_on_EF_text_changed"]
[connection signal="text_changed" from="GridContainer/EP" to="." method="_on_EP_text_changed"]
[connection signal="text_changed" from="GridContainer/ML" to="." method="_on_ML_text_changed"]
[connection signal="text_changed" from="GridContainer/MO" to="." method="_on_MO_text_changed"]
[connection signal="text_changed" from="GridContainer/MF" to="." method="_on_MF_text_changed"]
[connection signal="text_changed" from="GridContainer/MP" to="." method="_on_MP_text_changed"]
[connection signal="text_changed" from="GridContainer/TL" to="." method="_on_TL_text_changed"]
[connection signal="text_changed" from="GridContainer/TO" to="." method="_on_TO_text_changed"]
[connection signal="text_changed" from="GridContainer/TF" to="." method="_on_TF_text_changed"]
[connection signal="text_changed" from="GridContainer/TP" to="." method="_on_TP_text_changed"]
